# OctoBase

./: .dockerignore  .editorconfig  .env-template  .git-blame-ignore-revs  .gitignore  .gitmodules  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  tsconfig.json  turbo.json
apps/cloud/: Cargo.toml  example.env
apps/cloud/src/: config.rs  context.rs  database.rs  error_info.rs  error_status.rs  files.rs  key.rs  layer.rs  login.rs  main.rs  model.rs  schema.rs  tracing.rs  utils.rs
apps/cloud/src/api/: blobs.rs  collaboration.rs  common.rs  mod.rs  permissions.rs  user_channel.rs  workspace.rs  ws.rs
apps/cloud/src/application/: blob_service.rs  mod.rs
apps/cloud/src/files/: mod.rs
apps/cloud/src/infrastructure/: auth.rs  error_status.rs  mod.rs
apps/cloud/src/storage/: documents.rs  mod.rs
apps/cloud/static/: invite.html  invited.html  successJoin.html
apps/doc_merger/: Cargo.toml
apps/doc_merger/src/: main.rs
apps/keck/: .env.template  .gitignore  Cargo.toml  build.rs  jwst.restbook
apps/keck-core/: Cargo.toml
apps/keck-core/src/: main.rs
apps/keck-core/src/server/: mod.rs  subscribe.rs
apps/keck/src/: main.rs  sync.rs
apps/keck/src/server/: api.rs  collaboration.rs  files.rs  mod.rs  subscribe.rs  utils.rs
apps/keck/src/sync/: mod.rs  pool.rs  storage.rs  sync.rs
apps/keck/src/utils/: events.rs  logger.rs  mod.rs
apps/pulsar/: Cargo.toml
apps/pulsar/src/: broadcast.rs  main.rs
libs/OctoBase/: Cargo.toml
libs/OctoBase/src/: concepts.rs  lib.rs  test_user_prop_keys.rs  utils.rs
libs/OctoBase/src/history/: raw.rs
libs/cang-jie/: Cargo.toml
libs/cang-jie/src/: lib.rs  tokenizer.rs
libs/cang-jie/tests/: unicode_split.rs
libs/cloud-components/: Cargo.toml
libs/cloud-components/src/: auth.rs  constants.rs  lib.rs  mail.rs  utils.rs
libs/cloud-components/static/: invite.html
libs/cloud-database/: Cargo.toml
libs/cloud-database/entities/: mod.rs  prelude.rs  users.rs  workspaces.rs
libs/cloud-database/migration/: Cargo.toml
libs/cloud-database/migration/src/: lib.rs  m20220101_000001_create_user_table.rs  m20230101_000002_create_google_user_table.rs  m20230101_000003_create_workspaces_table.rs  m20230101_000004_create_permissions_table.rs  m20230217_000001_update_permissions_table.rs  m20230519_000001_update_password_with_argon2.rs  main.rs
libs/cloud-database/src/: database.rs  lib.rs  model.rs
libs/cloud-database/src/entities/: google_users.rs  mod.rs  permissions.rs  prelude.rs  users.rs  workspaces.rs
libs/cloud-database/src/migration/: Cargo.toml
libs/cloud-database/src/orm/: database.rs  mod.rs  model.rs
libs/cloud-database/src/postgres/: database.rs  mod.rs
libs/cloud-database/src/sqlite/: database.rs  mod.rs
libs/cloud-infra/: Cargo.toml
libs/cloud-infra/assets/: 404-dev.html  invite.html
libs/cloud-infra/src/: auth.rs  constants.rs  lib.rs  mail.rs
libs/cloud-infra/src/hosting/: api_doc.rs  files.rs  mod.rs  pages.rs
libs/jwst/: Cargo.toml  build.rs
libs/jwst-codec/: Cargo.toml
libs/jwst-codec-util/: Cargo.toml
libs/jwst-codec-util/src/: lib.rs
libs/jwst-codec-util/src/doc_operation/: types.rs
libs/jwst-codec-utils/: Cargo.toml
libs/jwst-codec-utils/benches/: apply_benchmarks.rs  array_ops_benchmarks.rs  codec_benchmarks.rs  map_ops_benchmarks.rs  text_ops_benchmarks.rs  update_benchmarks.rs
libs/jwst-codec-utils/benches/utils/: files.rs
libs/jwst-codec-utils/fuzz/: Cargo.toml
libs/jwst-codec-utils/fuzz/fuzz_targets/: apply_update.rs  codec_doc_any.rs  codec_doc_any_struct.rs  decode_bytes.rs
libs/jwst-codec-utils/src/: codec.rs  doc.rs  lib.rs  message.rs
libs/jwst-codec-utils/src/doc_operation/: mod.rs
libs/jwst-codec/benches/: apply_benchmarks.rs  array_ops_benchmarks.rs  codec_benchmarks.rs  map_ops_benchmarks.rs  ops_benchmarks.rs  text_ops_benchmarks.rs  update_benchmarks.rs
libs/jwst-codec/benches/utils/: files.rs  mod.rs
libs/jwst-codec/fuzz/: Cargo.toml
libs/jwst-codec/fuzz/fuzz_targets/: apply_update.rs  codec_doc_any.rs  codec_doc_any_struct.rs  decode_bytes.rs  i32_decode.rs  i32_encode.rs  i64_decode.rs  i64_encode.rs  ins_del_text.rs  parallel_insert_text.rs  sync_message.rs  u64_decode.rs  u64_encode.rs
libs/jwst-codec/src/: encode.rs  lib.rs  sync.rs  update.rs
libs/jwst-core/: Cargo.toml
libs/jwst-core-storage/: Cargo.toml
libs/jwst-core-storage/src/: lib.rs  rate_limiter.rs  types.rs
libs/jwst-core/src/: constants.rs  lib.rs  utils.rs
libs/jwst-embedded/: Cargo.toml
libs/jwst-embedded/src/: lib.rs
libs/jwst-ffi/: Cargo.toml  binding.h  build.rs
libs/jwst-ffi/src/: lib.rs
libs/jwst-jni/: Cargo.toml  build.rs
libs/jwst-jni/android/: build.gradle
libs/jwst-jni/src/: block.rs  java_glue.rs  java_glue.rs.in  lib.rs  storage.rs  transaction.rs  workspace.rs
libs/jwst-logger/: Cargo.toml  build.rs
libs/jwst-logger/src/: filter.rs  formatter.rs  lib.rs  logger.rs
libs/jwst-py/: Cargo.toml  pyproject.toml
libs/jwst-py/src/: lib.rs
libs/jwst-py/tests/: test_workspace.py
libs/jwst-rpc/: Cargo.toml
libs/jwst-rpc/fuzz/: Cargo.toml
libs/jwst-rpc/src/: broadcast.rs  channel.rs  client.rs  client_webrtc.rs  connector.rs  context.rs  handler.rs  lib.rs  protocol.rs  types.rs  utils.rs
libs/jwst-static/: Cargo.toml
libs/jwst-static/src/: 404.html  api_doc.rs  files.rs  lib.rs  pages.rs
libs/jwst-storage/: Cargo.toml
libs/jwst-storage/src/: blob.rs  blobs.rs  database.rs  doc.rs  docs.rs  lib.rs  rate_limiter.rs  storage.rs  tests.rs  types.rs  utils.rs
libs/jwst-wasm/: Cargo.toml
libs/jwst-wasm/src/: lib.rs
libs/jwst/src/: block.rs  constants.rs  history.rs  lib.rs  octo.rs  storage.rs  sys.rs  types.rs  utils.rs  workspace.rs
libs/logger/: Cargo.toml
libs/logger/src/: lib.rs  logger.rs
libs/storage/: Cargo.toml
libs/storage/src/: blob.rs  blobs.rs  doc.rs  documents.rs  lib.rs  types.rs
libs/y-sync/: .gitignore  Cargo.toml  LICENSE
libs/y-sync/src/: lib.rs  sync.rs
libs/yrs/: Cargo.toml
libs/yrs/src/: block.rs  doc.rs  store.rs  update.rs
(+759 files in other folders)
