[workspace]

members = [
    "apps/cloud",
    "apps/keck",
    "libs/cloud-components",
    "libs/cloud-database",
    "libs/cloud-database/migration",
    "libs/jwst",
    # "libs/jwst-binding/jwst-ffi",
    "libs/jwst-binding/jwst-jni",
    # "libs/jwst-binding/jwst-py",
    # "libs/jwst-binding/jwst-wasm",
    "libs/jwst-logger",
    "libs/jwst-rpc",
    "libs/jwst-static",
    "libs/jwst-storage",
    "libs/jwst-storage/src/migration",
]


[profile.release]
lto = true
opt-level = "z"
codegen-units = 1

[profile.dev.package.sqlx-macros]
opt-level = 3

[patch.crates-io]
rust-embed = { git = "https://github.com/pyrossh/rust-embed", rev = "7c0fc42" }
lib0 = { git = "https://github.com/toeverything/y-crdt", rev = "e0cf899" }
yrs = { git = "https://github.com/toeverything/y-crdt", rev = "e0cf899" }
