[workspace]

members = [
  "apps/doc_merger",
  "apps/keck",
  "libs/jwst-binding/jwst-jni",
  "libs/jwst-binding/jwst-swift",
  "libs/jwst-binding/jwst-swift/jwst-swift-integrate",
  "libs/jwst-binding/jwst-wasm",
  "libs/jwst-codec",
  "libs/jwst-codec-utils",
  "libs/jwst-core",
  "libs/jwst-logger",
  "libs/jwst-rpc",
  "libs/jwst-storage",
  "libs/jwst-storage/src/migration",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
bytes = "1.5.0"
chrono = "0.4.31"
futures = "0.3.29"
nanoid = "0.4.0"
rand = "0.8.5"
serde = "1.0.190"
serde_json = "1.0.107"
thiserror = "1.0.50"
tokio = "1"

jwst = { workspace = true, path = "libs/jwst" }
jwst-codec = { workspace = true, path = "libs/jwst-codec" }
jwst-core = { workspace = true, path = "libs/jwst-core" }
jwst-logger = { workspace = true, path = "libs/jwst-logger" }
jwst-rpc = { workspace = true, path = "libs/jwst-rpc" }
jwst-storage = { workspace = true, path = "libs/jwst-storage" }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[profile.fast-release]
inherits = "release"
codegen-units = 16
lto = false

[profile.profiling]
inherits = "fast-release"
debug = true

[profile.dev.package.image]
opt-level = 3

[profile.dev.package.sqlx-macros]
opt-level = 3

[patch.crates-io]
lib0 = { git = "https://github.com/toeverything/y-crdt", rev = "a700f09" }
y-sync = { git = "https://github.com/toeverything/y-sync", rev = "5626851" }
yrs = { git = "https://github.com/toeverything/y-crdt", rev = "a700f09" }
