[package]
name = "affine-cloud"
edition = "2021"
version = "0.1.0"

[features]
default = ["affine"]
affine = ["cloud-database/postgres", "jwst-storage/postgres"]

[dependencies]
bytes = "1.4.0"
axum = { version = "0.6.6", features = ["headers", "ws"] }
chrono = { version = "0.4.23", features = ["serde"] }
dotenvy = "0.15.6"
futures = "0.3.26"
futures-util = "0.3.26"
http-body = "0.4.5"
jsonwebtoken = "8.2.0"
lettre = { version = "0.10.2", default-features = false }
lib0 = "0.16.3"
mime = "0.3.16"
mimalloc = "0.1.34"
nanoid = "0.4.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tempfile = "3.4.0"
tokio = { version = "1.26.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tower-http = { version = "0.4.0", features = [
    "auth",
    "cors",
    "propagate-header",
    "request-id",
    "trace",
] }
utoipa = { version = "3.0.3", features = ["axum_extras"] }

# ======= workspace dependencies =======
cloud-components = { path = "../../libs/cloud-components" }
cloud-database = { path = "../../libs/cloud-database" }
jwst = { path = "../../libs/jwst" }
jwst-logger = { path = "../../libs/jwst-logger" }
jwst-rpc = { path = "../../libs/jwst-rpc" }
jwst-static = { path = "../../libs/jwst-static" }
jwst-storage = { path = "../../libs/jwst-storage" }
