[package]
name = "affine-cloud"
edition = "2021"
version = "0.1.0"

[features]
default = ["affine"]
affine = ["cloud-database/postgres", "jwst-storage/postgres"]

[dependencies]
bytes = "1.4.0"
axum = { version = "0.6.10", features = ["headers", "ws"] }
chrono = { version = "0.4.23", features = ["serde"] }
dotenvy = "0.15.6"
futures = "0.3.27"
futures-util = "0.3.27"
http-body = "0.4.5"
jsonwebtoken = "8.2.0"
lettre = { version = "0.10.3", default-features = false }
image =  "0.24.5" 
lib0 = "0.16.5"
mime = "0.3.16"
mimalloc = "0.1.34"
nanoid = "0.4.0"
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
tempfile = "3.4.0"
tokio = { version = "1.26.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tower-http = { version = "0.4.0", features = [
    "auth",
    "cors",
    "propagate-header",
    "request-id",
    "trace",
] }
utoipa = { version = "3.1.0", features = ["axum_extras"] }
form_urlencoded = "1.1.0"
yrs = "0.16.5"

# ======= workspace dependencies =======
cloud-database = { path = "../../libs/cloud-database" }
cloud-infra = { path = "../../libs/cloud-infra" }
jwst = { path = "../../libs/jwst" }
jwst-logger = { path = "../../libs/jwst-logger" }
jwst-rpc = { path = "../../libs/jwst-rpc" }
jwst-storage = { path = "../../libs/jwst-storage" }

[dev-dependencies]
axum-test-helper = "0.2.0"
