[package]
name = "doc_merger"
version = "0.1.0"
authors = ["DarkSky <darksky2048@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
lib0 = { version = "0.16.5", features = ["lib0-serde"] }
yrs = "0.16.5"
assert-json-diff = "2.0.2"

# ======== workspace dependencies ========
serde_json = { workspace = true }

jwst-codec = { workspace = true, features = ["debug", "large_refs"] }
