[package]
name = "keck"
version = "0.1.0"
authors = ["DarkSky <darksky2048@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-only"

[features]
default = ["jwst"]
affine = ["jwst-storage/sqlite"]
jwst = [
  "api",
  "schema",
  "docs",
  "jwst-storage/sqlite",
  "jwst-storage/mysql",
  "jwst-storage/postgres",
]
api = ["utoipa"]
docs = ["mdbook"]
schema = ["utoipa-swagger-ui"]

[dependencies]
anyhow = "1.0.69"
axum = { version = "0.6.10", features = ["headers", "ws"] }
cfg-if = "1.0.0"
futures = "0.3.26"
lib0 = { version = "0.16.3", features = ["lib0-serde"] }
log = { version = "0.4.17", features = [
  "max_level_trace",
  "release_max_level_info",
] }
dotenvy = "0.15.6"
mimalloc = "0.1.34"
nanoid = "0.4.0"
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
sqlx = { version = "0.6.2", features = [
  "chrono",
  "macros",
  "migrate",
  "runtime-tokio-rustls",
] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["cors"] }
thiserror = "1.0.39"
time = "0.3.20"
tokio = { version = "1.26.0", features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }
utoipa = { version = "2.4.2", features = ["axum_extras"], optional = true }
utoipa-swagger-ui = { version = "3.0.2", features = ["axum"], optional = true }
yrs = "0.16.3"

# ======= workspace dependencies =======

jwst = { path = "../../libs/jwst" }
jwst-logger = { path = "../../libs/jwst-logger" }
jwst-rpc = { path = "../../libs/jwst-rpc" }
jwst-static = { path = "../../libs/jwst-static" }
jwst-storage = { path = "../../libs/jwst-storage" }

[dev-dependencies]
axum-test-helper = "0.2.0"
reqwest = { version = "0.11.14", default-features = false, features = [
  "json",
  "rustls-tls",
] }
