[package]
name = "keck"
version = "0.1.0"
authors = ["DarkSky <darksky2048@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-only"

[features]
default = ["jwst"]
affine = ["jwst-storage/sqlite"]
jwst = [
  "api",
  "schema",
  "jwst-storage/sqlite",
  "jwst-storage/mysql",
  "jwst-storage/postgres",
]
api = ["utoipa"]
schema = ["utoipa-swagger-ui"]

[dependencies]
axum = { version = "0.6.20", features = ["headers", "ws"] }
cfg-if = "1.0.0"
log = { version = "0.4.17", features = [
  "max_level_trace",
  "release_max_level_info",
] }
dotenvy = "0.15.7"
mimalloc = "0.1.36"
sqlx = { version = "0.7.1", features = [
  "chrono",
  "macros",
  "migrate",
  "runtime-tokio-rustls",
] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["cors"] }
time = "0.3.20"
tokio = { version = "=1.28.0", features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }
utoipa = { version = "3.5.0", features = ["axum_extras"], optional = true }
utoipa-swagger-ui = { version = "3.1.5", optional = true }
libc = "0.2.147"
reqwest = { version = "0.11.19", default-features = false, features = [
  "json",
  "rustls-tls",
] }

# ======= workspace dependencies =======
anyhow = { workspace = true }
futures = { workspace = true }
nanoid = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

jwst-core = { workspace = true, features = ["large_refs"] }
jwst-logger = { workspace = true }
jwst-rpc = { workspace = true }
jwst-storage = { workspace = true }

[dev-dependencies]
axum-test-helper = "0.3.0"
