[package]
name = "octobase"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["unwrap"]
unwrap = []

[dependencies]
async-trait = "0.1.60"
bytes = "1.3.0"
chrono = "0.4.23"
futures = "0.3.25"
log = "0.4.17"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.38"
tokio = "1.23.0"
type-map = "0.5.0"
utoipa = "2.4.2"

# ======= workspace dependencies =======
lib0 = { path = "../vendors/y-crdt-0.14/lib0", features = ["lib0-serde"] }
yrs = { path = "../vendors/y-crdt-0.14/yrs" }
y-sync = { path = "../vendors/y-sync-0.14" }

[dev-dependencies]
assert-json-diff = "2.0.2"
