[package]
name = "cloud-components"
version = "0.1.0"
authors = ["DarkSky <darksky2048@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
aes-gcm = "0.10.1"
axum = { version = "0.6.6" }
chrono = "0.4.23"
dotenvy = "0.15.6"
handlebars = "4.3.6"
jsonwebtoken = "8.2.0"
lettre = { version = "0.10.2", default-features = false, features = [
    "builder",
    "tokio1",
    "pool",
    "smtp-transport",
    "tokio1-rustls-tls",
] }
pem = "1.1.1"
rand = "0.8.5"
reqwest = { version = "0.11.14", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.6"
thiserror = "1.0.39"
url = "2.3.1"
x509-parser = "0.14.0"

# ======= workspace dependencies =======
cloud-database = { path = "../cloud-database" }
jwst = { path = "../jwst" }
jwst-static = { path = "../jwst-static" }
