[package]
name = "cloud-database"
version = "0.1.0"
edition = "2021"

[features]
default = ["sqlite"]
server = []
mysql = ["sqlx/mysql", "sea-orm/sqlx-mysql"]
postgres = ["sqlx/postgres", "sea-orm/sqlx-postgres"]
sqlite = ["sqlx/sqlite", "sea-orm/sqlx-sqlite"]

[dependencies]
async-trait = "0.1.68"
chrono = { version = "0.4.24", features = ["serde"] }
nanoid = "0.4.0"
schemars = "0.8.12"
serde = { version = "1.0.160", features = ["derive"] }
serde_repr = "0.1.12"
sqlx = { version = "0.7.1", features = [
    "chrono",
    "macros",
    "runtime-tokio-rustls",
] }
sea-orm = { version = "0.12.2", features = ["runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "0.12.2", default-features = false }
tokio = { version = "1.27.0", features = ["fs", "macros", "sync"] }
yrs = "0.16.5"

# ======= workspace dependencies =======
affine-cloud-migration = { path = "./migration" }
jwst = { workspace = true }
jwst-logger = { workspace = true }

[dev-dependencies]
anyhow = "1.0.69"
