[package]
name = "jwst-codec-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary = { version = "1.3.0", features = ["derive"] }
phf = { version = "0.11", features = ["macros"] }
yrs = "0.16.5"
jwst-codec = { workspace = true }
