[package]
authors = ["x1a0t <405028157@qq.com>", "DarkSky <darksky2048@gmail.com>"]
edition = "2021"
name = "jwst-codec-utils"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["merger"]
bench = ["regex"]
fuzz = ["arbitrary", "phf"]
merger = ["clap", "jwst-codec/large_refs"]

[dependencies]
arbitrary = { version = "1.3", features = ["derive"], optional = true }
clap = { version = "4.4", features = ["derive"], optional = true }
phf = { version = "0.11", features = ["macros"], optional = true }
rand_chacha = "0.3"
regex = { version = "1.10", optional = true }

# ======= bench dependencies =======
lib0 = { version = "=0.16.5", features = ["lib0-serde"] }
y-sync = "=0.3.1"
yrs = "=0.16.5"

# ======= workspace dependencies =======
rand = { workspace = true }

jwst-codec = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
path-ext = "0.1"
proptest = "1.3"
proptest-derive = "0.4"

[[bin]]
name = "bench_result_render"
path = "bin/bench_result_render.rs"

[[bin]]
name = "doc_merger"
path = "bin/doc_merger.rs"

[[bin]]
name = "memory_leak_test"
path = "bin/memory_leak_test.rs"

[[bench]]
harness = false
name = "array_ops_benchmarks"

[[bench]]
harness = false
name = "codec_benchmarks"

[[bench]]
harness = false
name = "map_ops_benchmarks"

[[bench]]
harness = false
name = "text_ops_benchmarks"

[[bench]]
harness = false
name = "apply_benchmarks"

[[bench]]
harness = false
name = "update_benchmarks"

[lib]
bench = true
