[package]
authors = ["DarkSky <darksky2048@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-only"
name = "jwst-codec"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
byteorder = "1.4.3"
nanoid = "0.4.0"
nom = "7.1.3"
ordered-float = "3.6.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.183" }
serde_json = "1.0.105"
thiserror = "1.0.40"

# ======= workspace dependencies =======
jwst-logger = { workspace = true }

[features]
bench = []
large_refs = []

[target.'cfg(fuzzing)'.dependencies]
arbitrary = { version = "1.3.0", features = ["derive"] }
ordered-float = { version = "3.6.0", features = ["arbitrary"] }

[target.'cfg(loom)'.dependencies]
loom = { version = "0.6", features = ["checkpoint"] }

[dev-dependencies]
assert-json-diff = "2.0.2"
criterion = { version = "0.5.1", features = ["html_reports"] }
lib0 = { version = "0.16.5", features = ["lib0-serde"] }
ordered-float = { version = "3.6.0", features = ["proptest"] }
path-ext = "0.1.0"
proptest = "1.1.0"
proptest-derive = "0.3.0"
y-sync = { git = "https://github.com/toeverything/y-sync", rev = "aeb0010" }
yrs = "0.16.5"

[[bin]]
name = "memory_leak_test"
path = "bin/memory_leak_test.rs"

[[bench]]
harness = false
name = "array_ops_benchmarks"

[[bench]]
harness = false
name = "codec_benchmarks"

[[bench]]
harness = false
name = "map_ops_benchmarks"

[[bench]]
harness = false
name = "text_ops_benchmarks"

[[bench]]
harness = false
name = "update_benchmarks"

[lib]
bench = true
