[package]
name = "jwst-core"
version = "0.1.0"
authors = ["DarkSky <darksky2048@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
large_refs = ["jwst-codec/large_refs"]

[dependencies]
base64 = "0.21.4"
tracing = { version = "0.1", features = ["log"] }

# ======= workspace dependencies =======
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
nanoid = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

jwst-codec = { workspace = true }

[dev-dependencies]
assert-json-diff = "2.0"
