[package]
name = "jwst-embedded"
version = "0.1.0"
authors = ["DarkSky <darksky2048@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-only"

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]
mysql = ["sqlx/mysql"]

[dependencies]
anyhow = "^1.0.68"
async-trait = "^0.1.60"
bytes = "^1.3.0"
futures = "^0.3.25"
path-ext = "^0.1.0"
tokio-buf = "^0.1.1"

[dependencies.jwst]
path = "../jwst"

[dependencies.sqlx]
version = "^0.6.2"
features = ["chrono", "macros", "migrate", "runtime-tokio-rustls"]

[dependencies.tokio]
version = "^1.23.0"
features = ["macros", "rt-multi-thread"]

[dependencies.tokio-util]
version = "^0.7.4"
features = ["io"]
