[package]
name = "jwst-ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib0 = "0.13.0"
jwst = { path = "../jwst" }
yrs = { path = "../yrs" }

[lib]
crate-type = ["staticlib"]

[build-dependencies]
cbindgen = "^0.24.3"
