[package]
name = "jwst-ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jwst = { path = "../jwst" }
lib0 = { path = "../../forks/y-crdt/lib0" }
yrs = { path = "../../forks/y-crdt/yrs" }

[lib]
crate-type = ["staticlib"]

[build-dependencies]
cbindgen = "^0.24.3"
