[package]
name = "jwst-logger"
version = "0.1.0"
authors = ["DarkSky <darksky2048@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
nu-ansi-term = "0.49.0"
tracing = { version = "0.1.37", features = ["log"] }
tracing-log = { version = "0.1.3", features = [
  "log-tracer",
  "std",
], default-features = false }
tracing-stackdriver = "0.8.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

# ======= workspace dependencies =======
chrono = { workspace = true }
