[package]
name = "jwst-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "jwst_py"
crate-type = ["cdylib"]


[dependencies]
pyo3 = { version = "0.17.3"}
jwst = { path = "../jwst" }
yrs = { path = "../yrs" }
